--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^2.42.0",
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
+    "moment": "github:moment/moment",
     "next": "14.0.1",
     "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
