--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.1",
     "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-time-picker": "^6.6.0",
