--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # NEXT_PUBLIC_API_BASE_URL=https://api.foodia-dev.nuncorp.id/api/v1/
 NEXT_PUBLIC_API_BASE_URL=https://api-foodia-staging.cmtdepok.xyz/api/v1/
-NEXT_PUBLIC_URL_STORAGE=https://api.foodia-dev.nuncorp.id/storage/
+NEXT_PUBLIC_URL_STORAGE=https://api-foodia-staging.cmtdepok.xyz/storage/
 NEXT_PUBLIC_URL_PAYMEN=http://localhost:3000/bukti_pembayaran
