--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
     "moment": "github:moment/moment",
+    "moment-timezone": "^0.5.45",
     "next": "14.0.1",
     "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
