--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tabler/icons-react": "^2.42.0",
     "axios": "^1.6.2",
+    "compressorjs": "^1.2.1",
     "leaflet": "^1.9.4",
     "moment": "github:moment/moment",
     "next": "14.0.1",
