--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.16.1",
     "react-responsive-carousel": "^3.2.23",
     "react-time-picker": "^6.6.0",
+    "react-webcam": "^7.2.0",
     "sweetalert2": "^11.10.1",
     "tabler-icons-react": "^1.56.0"
   },
