--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@tabler/icons-react": "^2.42.0",
     "axios": "^1.6.2",
     "compressorjs": "^1.2.1",
+    "crypto-js": "^4.2.0",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "moment": "github:moment/moment",
     "next": "14.0.1",
     "nextjs-toploader": "^1.6.6",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
